infra/k3s/base/apps/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.localhost`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
